update general information

--- a/index.html
+++ b/index.html
@@ -103,10 +103,17 @@ body {
 
 <body>
   <div class="container">
-  <h2>Registration for the 2019 Winter Berkeley DESC meeting</h2>
-  The registration fee for the collaboration meeting is <u><i>$100</i></u>, which
-  covers attendance to the 5-day meeting and coffee breaks. Fees do not cover a
-  Collaboration Meeting Dinner, which is still undetermined.
+  <h2>Registration for the 2019 Summer APC DESC meeting</h2>
+  The registration fee for the collaboration meeting is <u><i>228€</i></u> (114€ for 
+  students), which covers attendance to the 5-day meeting, a welcoming cocktail, lunches, 
+  and coffee breaks. Fees do not cover the Collaboration Meeting Dinner on Thursday July 
+  18, 2019 at the Musée d'Orsay. A extra fee of 48€ (15€ for students) will be required 
+  if you want to attend this dinner.
+  
+  The local organizing committee also offers accommodation for students at a special 
+  price (204€ for 5 nights from the 14th to the 20th of July, 2019) located at the 
+  <a href="http://www.ciup.fr">Cité Universitaire de Paris</a> (subject to availability, 
+  on a first come, first served basis). 
   <br>
   <br>
   <form action="" method="POST" id="main_form">
