--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@ body {
         <div class="invalid-feedback">Please provide your last name.</div>
       </div>
     </div>
+     <div class="form-group">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="student" name="student">
+        <label class="form-check-label" for="student">
+        Check if you are a PhD or grad student.
+         </label>
+       </div>
+      </div>
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" class="form-control" name="email" id="email" placeholder="Email" maxlength="100" required>
@@ -141,7 +149,14 @@ body {
       <input type="text" class="form-control" name="affiliation" id="affili" placeholder="Affiliation" maxlength="100" required>
       <div class="invalid-feedback">Please provide your affiliation.</div>
     </div>
-
+    
+ </div>
+    <div class="form-group">
+      <label for="country">Country</label>
+      <input type="text" class="form-control" name="country" id="country" placeholder="Country" maxlength="100" required>
+      <div class="invalid-feedback">Please provide your country.</div>
+    </div>
+    
     <div class="form-group">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="contact" name="contact">
@@ -197,10 +212,10 @@ body {
             <span id="pronoun-s"></span>
           </div>
           <div id="event-d">
-            <span id="event-s">Collaboration Meeting, Feb 25-Mar 1 2019</span>
+            <span id="event-s">Collaboration Meeting, July 15-19 2019</span>
           </div>
           <div id="location-d">
-            <span id="location-s">International House, Berkeley</span>
+            <span id="location-s">APC, Paris</span>
           </div>
           <div id="logo1" class="logo"></div>
           <div id="logo2" class="logo"></div>
@@ -236,20 +251,9 @@ body {
         </div>
     </div>
 
-    <div class="form-group">
-       <label for="carpooling">Will you be driving a car during the meeting and can help with carpooling?</label>
-        <div class="form-check  " id="carpooling">
-            <input class="form-check-input" type="radio" name="carpool" id="carTrue" value="yes" required>
-            <label class="form-check-label" for="inlineRadio1">Yes</label>
-          </div>
-          <div class="form-check ">
-            <input class="form-check-input" type="radio" name="carpool" id="carFalse" value="no">
-            <label class="form-check-label" for="inlineRadio2">No</label>
-          <div class="invalid-feedback">Please answer this question.</div>
-          </div>
-    </div>
     <div class="form-group" hidden="true">
-      <label for="dinner_diet">If attending the conference dinner, please indicate any dietary restrictions: </label>
+      <label for="dinner_diet">Please indicate here any dietary restrictions and any other
+       special request to the local organizing committee: </label>
       <input type="text" class="form-control" id="dinner_diet" name="dinner_diet" maxlength="256" placeholder="optional">
     </div>
 
