--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@ body {
         <div class="invalid-feedback">Please provide your last name.</div>
       </div>
     </div>
-     <div class="form-group">
+    <div class="form-group">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="student" name="student">
         <label class="form-check-label" for="student">
-        Check if you are a PhD or grad student.
-         </label>
-       </div>
+          Check if you are a PhD or grad student.
+        </label>
       </div>
+    </div>
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" class="form-control" name="email" id="email" placeholder="Email" maxlength="100" required>
@@ -250,12 +250,36 @@ body {
         </div>
     </div>
 
-    <div class="form-group" hidden="true">
+    <div class="form-check form-check-inline">
+      <label class="form-check-label" for="dinner_attend"> I would like to
+	attend the Collaboration Meeting Dinner on Thursday July 18th&nbsp;&nbsp;</label>
+      <input class="form-check-input" type="checkbox" name="dinner_attend"
+	     id="dinner_attend">
+    </div>
+    <BR>
+    <div class="form-check form-check-inline">
+      <label class="form-check-label" for="dinner_plus_one"> I would to buy an
+	extra ticket for the Collaboration Meeting Dinner&nbsp;&nbsp;</label>
+      <input class="form-check-input" type="checkbox" name="dinner_plus_one" id="dinner_plus_one">
+    </div>
+
+    <div class="form-group">
       <label for="dinner_diet">Please indicate here any dietary restrictions and any other
        special request to the local organizing committee: </label>
       <input type="text" class="form-control" id="dinner_diet" name="dinner_diet" maxlength="256" placeholder="optional">
     </div>
 
+    <div class="form-group">
+      <label for="shirt-size">Please indicate your shirt size: </label>
+      <select class="form-control" id="shirt-size" name="shirt-size">
+	<option value="XS"> XS </option>
+	<option value="S"> S </option>
+	<option value="M" selected="selected"> M </option>
+        <option value="L" > L </option>
+        <option value="XL"> XL </option>
+        <option value="XXL"> XXL </option>
+      </select>
+    </div>
     <hr>
     <div class="form-group">
       <div class="form-check">
