test azur colloque link

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ body {
         </div>
         <div class="modal-body">
           <div class="embed-responsive embed-responsive-1by1">
-            <iframe class="embed-responsive-item" src="https://www.cvent.com/events/lsst-desc-winter-collaboration-meeting/registration-1672e3a8972a4d608897b80dd32f5ce4.aspx?fqp=true" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.azur-colloque.fr/DR01/inscription/inscription/114" allowfullscreen></iframe>
           </div>
         </div>
         <div class="modal-footer">
