have matching fields between html and python

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ body {
 	extra ticket for the Collaboration Meeting Dinner&nbsp;&nbsp;</label>
       <input class="form-check-input" type="checkbox" name="dinner_plus_one" id="dinner_plus_one">
     </div>
-
+    <BR>
     <div class="form-group">
       <label for="dinner_diet">Please indicate here any dietary restrictions and any other
        special request to the local organizing committee: </label>
@@ -264,8 +264,8 @@ body {
     </div>
 
     <div class="form-group">
-      <label for="shirt-size">Please indicate your shirt size: </label>
-      <select class="form-control" id="shirt-size" name="shirt-size">
+      <label for="shirt_size">Please indicate your shirt size: </label>
+      <select class="form-control" id="shirt_size" name="shirt_size">
 	<option value="XS"> XS </option>
 	<option value="S"> S </option>
 	<option value="M" selected="selected"> M </option>
