--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
 	  </div>
 	  <BR>
 	  <div class="form-check form-check-inline">
-	    <label class="form-check-label" for="dinner_plus_one"> I would to buy an
+	    <label class="form-check-label" for="dinner_plus_one"> I would like
+	      to buy an
 	      extra ticket for the Collaboration Meeting Dinner&nbsp;&nbsp;</label>
 	    <input class="form-check-input" type="checkbox" name="dinner_plus_one" id="dinner_plus_one">
 	  </div>
