--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 	  </div>
 
 	  <div class="form-group">
-	    <label for="shirt_size">Please indicate your shirt size: </label>
+	    <label for="shirt_size">Please indicate your shirt size  (Unisex sizes): </label>
 	    <select class="form-control" id="shirt_size" name="shirt_size">
 	      <option value="XS"> XS </option>
 	      <option value="S"> S </option>
