add post-docs to special accomodation

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       18, 2019 at the Musée d'Orsay. A extra fee of 48€ (15€ for students) will be required
       if you want to attend this dinner.
       <BR><BR>
-      The local organizing committee also offers accommodation for students at a special
+      The local organizing committee also offers accommodation for students and
+      post-docs at a special
       price (204€ for 6 nights from the 14th to the 20th of July, 2019) located at the
       <a href="http://www.ciup.fr">Cité Universitaire de Paris</a> (subject to availability,
       on a first come, first served basis).
