--- a/index.html
+++ b/index.html
@@ -161,11 +161,10 @@
 	</div>
 
 	<div class="form-group">
-	  <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="visa" name="visa">
-            <label class="form-check-label" for="visa">
-              Check if you require an invitation letter for visa applications.
-            </label>
+	  <div class="form-text">
+	    If you need a Letter of Invitation for visa reasons etc, please
+	    contact the <a href="mailto:lsst-desc-spokesperson@slac.stanford.edu">DESC
+	    Spokesperson</a> using "DESC19 Invitation Letter" as the email subject.
 	  </div>
 	</div>
 
