fill email subject directly

--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 	<div class="form-group">
 	  <div class="form-text">
 	    If you need a Letter of Invitation for visa reasons etc, please
-	    contact the <a href="mailto:lsst-desc-spokesperson@slac.stanford.edu">DESC
-	    Spokesperson</a> using "DESC19 Invitation Letter" as the email subject.
+	    contact
+	    the <a href="mailto:lsst-desc-spokesperson@slac.stanford.edu?subject=[DESC19] Invitation Letter Request">DESC
+	    Spokesperson</a>.
 	  </div>
 	</div>
 
